WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284032
Unified compilation failure due to missing header
https://bugs.webkit.org/show_bug.cgi?id=284032
Summary
Unified compilation failure due to missing header
Jean-Yves Avenard [:jya]
Reported
2024-12-04 04:53:54 PST
Source/WebCore/platform/graphics/ImageUtilities.h Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-12-04 04:54:04 PST
<
rdar://problem/140909440
>
Jean-Yves Avenard [:jya]
Comment 2
2024-12-04 04:58:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37421
EWS
Comment 3
2024-12-04 05:00:54 PST
Committed
287339@main
(c7cab283e41e): <
https://commits.webkit.org/287339@main
> Reviewed commits have been landed. Closing PR #37421 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug