Unified compilation failure due to missing headers https://bugs.webkit.org/show_bug.cgi?id=284032 rdar://140909440

Unreviewed. Fix non-unified build

* Source/WebCore/platform/graphics/ImageUtilities.h:
* Source/WebCore/platform/graphics/cg/ImageUtilitiesCG.cpp:

Canonical link: https://commits.webkit.org/287339@main